INTPO002PD-4982: Create Admin request flow